--- a/basicauthen/src/main/resources/application.properties
+++ b/basicauthen/src/main/resources/application.properties
@@ -1,19 +1,46 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url =jdbc:postgresql://localhost:5432/basicauthentification
+#spring.datasource.url =jdbc:postgresql://localhost:5432/basicauthentification
 # Username and password
-spring.datasource.username =hom
-spring.datasource.password =123456
+#spring.datasource.username =hom
+#spring.datasource.password =123456
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 # Hibernate properties
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.show-sql = false
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+#spring.jpa.show-sql = false
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+###
+#   Database Settings
+###
+spring.datasource.url=jdbc:h2:mem:basicauthentification;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.platform=h2
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+###
+#   H2 Settings
+###
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+###
+#   Hibernate Settings
+###
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
 #logger
 logging.path=logs		
 logging.file=${logging.path}/log.log		
