--- a/basicauthen/src/main/resources/application.properties
+++ b/basicauthen/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 ###
 #   Database Settings
 ###
-spring.datasource.url=jdbc:h2:mem:basicauthentification;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url:jdbc:h2:./target/database/db;AUTO_SERVER=TRUE
 spring.datasource.platform=h2
 spring.datasource.username = sa
 spring.datasource.password =
